fix: update paragraph styling for improved visibility in business directory

--- a/chamber/styles/directory-base.css
+++ b/chamber/styles/directory-base.css
@@ -142,7 +142,7 @@ main{
     margin: 0 auto;
 } 
 
-main h1, main p{
+main h1, main .find-business-paragraph{
     text-align: center;
     color: #000;
     background-color: var(--alternative-text-color);
